Update link ảnh thêm câu lệnh

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -282,11 +282,11 @@ Vì vậy, để thêm các lệnh check dịch vụ ở 2 distro cũng phải k
 
 - Với CentOS
 
-<img src="../../images/plugin-c-client.png" />
+<img src="../../images/add-command-nrpe-c.png" />
 
 - Với Ubuntu
 
-<img src="../../images/plugin-u-client.png" />
+<img src="../../images/padd-command-nrpe-u.png" />
     
 Lưu lại file và thoát.
 
