--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -394,7 +394,7 @@ define service {
 Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios server.
 
 ```
-systemctl reload nagios.service
+systemctl restart nagios.service
 ```
 
 <a name="3.1.4"></a>
