Update thư mục chứa file cấu hình

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -312,6 +312,30 @@ Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám s
 <a name="3.1.3"></a>
 ##### 3.1.3 Thêm thông tin host trên Nagios Server
 
+- **Bước 1**: Cấu hình Nagios Server
+
+    - Chúng ta đặt tất cả các file cấu hình host giám sát vào một thư mục, sửa file cấu hình chính của nagios:
+
+    ```
+    vi /usr/local/nagios/etc/nagios.cfg
+    ```
+
+    - Tìm và bỏ "#" ở dòng:
+
+    ```
+    ...
+    cfg_dir=/usr/local/nagios/etc/servers
+    ...
+    ```
+
+    - Tạo thư mục và file cấu hình host cần giám sát:
+
+    ```
+    mkdir /usr/local/nagios/etc/servers
+    ```
+
+- **Bước 2**: Tạo file cấu hình cho host giám sát trên Nagios Server
+
 Trên Nagios Server, tạo file cấu hình cho mỗi host mà bạn muốn giám sát chúng ở folder `/usr/local/nagios/etc/servers/`. Trong trường hợp của tôi, tôi sẽ đặt tên cho nó là `web01.cfg`
 
 ```
