Update chính tả

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -214,7 +214,7 @@ make install
     - Thoát và lưu lại file.
     
 <a name="3.1.2"></a>
-##### 3.1.2 Cài đặt NRPE trên host cần giám sát
+#### 3.1.2 Cài đặt NRPE trên host cần giám sát
 
 Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sau:
 
@@ -310,7 +310,7 @@ Lưu lại file và thoát.
 Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám sát, chúng ta cần phải thêm host đó vào cấu hình Nagios Server trước khi bắt đầu giám sát nó.
 
 <a name="3.1.3"></a>
-##### 3.1.3 Thêm thông tin host trên Nagios Server
+#### 3.1.3 Thêm thông tin host trên Nagios Server
 
 - **Bước 1**: Cấu hình Nagios Server
 
