--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -328,7 +328,7 @@ Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám s
     ...
     ```
 
-    - Tạo thư mục và file cấu hình host cần giám sát:
+    - Tạo thư mục để lưu trữ file cấu hình các host cần giám sát:
 
     ```
     mkdir /usr/local/nagios/etc/servers
