sửa mục lục 5.2

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -14,7 +14,7 @@
 	- [4.3. Gửi cảnh báo khi máy chủ off hoặc restart](#43)
 - [5. Khác](#5)
 	- [5.1. Gửi mail cảnh báo qua mail domain](#51)
-	- [5.2. Gửi mail cảnh báo theo nhóm người dùng](#52)
+	- [5.2. Gửi mail cảnh báo cho nhiều người dùng](#52)
 - [6. Tài liệu tham khảo](#6)
 	
 
@@ -345,7 +345,7 @@ echo "This is a test." | mail -s "test message" tri.maiquoc@meditech.vn
 Với các bước thực hiện cảnh báo, làm tương tự như với Gmail
 
 <a name="52"></a>
-### 5.2. Gửi mail cảnh báo theo nhóm người dùng
+### 5.2. Gửi mail cảnh báo cho nhiều người dùng
 
 Trong mục này tôi sẽ hướng dẫn gửi email cảnh báo theo nhóm người dùng. Mô hình lab vẫn như trên
 
