Update phân Rabbit

--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -7,9 +7,10 @@
 - [ 1. Thông tin host ](#1)
 - [ 2. Các bước tiến hành ](#2)
     - [ 2.1. Chuẩn bị trên host RabbitMQ ](#2.1)
-    - [ 2.2. Chuẩn bị trên host Nagios Server](#2.2)
-    - [ 2.3. Cài đặt Plugin ](#2.3)
-    - [ 2.4. Thêm thông tin host và giám sát dịch vụ trên Nagios Server](#2.4)
+    - [ 2.2. Cấu hình trên Nagios Server](#2.2)
+        - [ 2.2.1 Cài đặt Perl-CPAN trên Nagios Server ](#2.2.1)
+        - [ 2.2.2 Cài đặt Plugin trên Nagios Server ](#2.2.2)
+        - [ 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server](#2.2.2)
 <a name="1"></a>
 ## 1. Thông tin host RabbitMQ
 
@@ -35,7 +36,10 @@ rabbitmqctl set_permissions -p / mon ".*" ".*" ".*"
 ```
 
 <a name="2.2"></a>
-### 2.2 Chuẩn bị trên host Nagios Server
+### 2.2 Cấu hình trên Nagios Server
+
+<a name="2.2.1"></a>
+#### 2.2.1 Cài đặt Perl-CPAN trên Nagios Server
 
 **Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server**
 
@@ -49,8 +53,8 @@ perl -MCPAN -e 'install Math::Calc::Units'
 
 **Lưu ý**: Khi lần đầu chạy lệnh trên, CPAN sẽ yêu cầu một số thiết lập, bấm Enter để nhập mặc định.
 
-<a name="2.3"></a>
-### 2.3 Cài đặt Plugin
+<a name="2.2.2"></a>
+#### 2.2.2 Cài đặt Plugin trên Nagios Server
 
 #### Tải gói plugin từ `git` và copy chúng vào thư mục plugins
 
@@ -63,8 +67,10 @@ cp nagios-plugins-rabbitmq/scripts/* /usr/local/nagios/libexec/rabbitmq/
 chown -R nagios. /usr/local/nagios/libexec/rabbitmq/
 ```
 
-<a name="2.4"></a>
-#### 2.4 Thêm thông tin host và giám sát dịch vụ trên Nagios Server
+<a name="2.2.3"></a>
+#### 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server
+
+- **Bước 1:* Thêm thông tin vào file host
 
 Quay trở lại Nagios server, chúng ta sẽ thêm phần thông tin của RabbitMQ vào `/etc/hosts`
 
@@ -76,6 +82,7 @@ vi /etc/hosts
 ...
 192.168.100.198 node1
 ```
+- **Bước 2:* Kiểm tra plugin
 
 Kiểm tra plugin, bằng lệnh sau:
 
@@ -85,6 +92,8 @@ cd /usr/local/nagios/libexec/rabbitmq/
 ```
 
 <img src="../../images/plugin-rabbitmq1.png" />
+
+- **Bước 3:* Thêm câu lệnh vào Nagios
 
 #### Thêm câu lệnh kiểm tra trong Nagios:
 
@@ -151,7 +160,9 @@ define command {
 ...
 ```
 
-Lưu ý: các lệnh trên chưa đặt ngưỡng cảnh báo.
+**Lưu ý**: các lệnh trên chưa đặt ngưỡng cảnh báo.
+
+- **Bước 4:* Tạo file cấu hình cho host RabbitMQ
 
 Tiếp theo, chúng ta tạo một `host` mới
 
@@ -234,12 +245,14 @@ define service {
 }
 ```
 
-Lưu lại file và khởi động lại nagios
+Lưu lại file.
+
+- **Bước 5:** Khởi động lại nagios
 
 ```
 systemctl restart nagios
 ```
 
-Kiểm tra trên Web UI:
+- **Bước 6:** Kiểm tra trên Web UI:
 
 <img src="../../images/plugin-rabbitmq2.png">
