Update các bước rabbitmq

--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -10,7 +10,8 @@
     - [ 2.2. Cấu hình trên Nagios Server](#2.2)
         - [ 2.2.1 Cài đặt Perl-CPAN trên Nagios Server ](#2.2.1)
         - [ 2.2.2 Cài đặt Plugin trên Nagios Server ](#2.2.2)
-        - [ 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server](#2.2.2)
+        - [ 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server](#2.2.3)
+        
 <a name="1"></a>
 ## 1. Thông tin host RabbitMQ
 
@@ -70,7 +71,7 @@ chown -R nagios. /usr/local/nagios/libexec/rabbitmq/
 <a name="2.2.3"></a>
 #### 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server
 
-- **Bước 1:* Thêm thông tin vào file host
+- **Bước 1:** Thêm thông tin vào file host
 
 Quay trở lại Nagios server, chúng ta sẽ thêm phần thông tin của RabbitMQ vào `/etc/hosts`
 
@@ -82,7 +83,7 @@ vi /etc/hosts
 ...
 192.168.100.198 node1
 ```
-- **Bước 2:* Kiểm tra plugin
+- **Bước 2:** Kiểm tra plugin
 
 Kiểm tra plugin, bằng lệnh sau:
 
@@ -93,7 +94,7 @@ cd /usr/local/nagios/libexec/rabbitmq/
 
 <img src="../../images/plugin-rabbitmq1.png" />
 
-- **Bước 3:* Thêm câu lệnh vào Nagios
+- **Bước 3:** Thêm câu lệnh vào Nagios
 
 #### Thêm câu lệnh kiểm tra trong Nagios:
 
@@ -162,7 +163,7 @@ define command {
 
 **Lưu ý**: các lệnh trên chưa đặt ngưỡng cảnh báo.
 
-- **Bước 4:* Tạo file cấu hình cho host RabbitMQ
+- **Bước 4:** Tạo file cấu hình cho host RabbitMQ
 
 Tiếp theo, chúng ta tạo một `host` mới
 
