update gửi cảnh báo theo nhóm người dùng, sửa lại mục lục

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -15,6 +15,9 @@
 - [5. Khác](#5)
 	- [5.1. Gửi mail cảnh báo qua mail domain](#51)
 	- [5.2. Gửi mail cảnh báo cho nhiều người dùng](#52)
+	- [5.3. Gửi mail cảnh báo theo từng nhóm người dùng](#53)
+		- [5.3.1. Gửi mail cảnh báo về dịch vụ cho nhóm người dùng](#531)
+		- [5.3.2. Gửi mail cảnh báo về host cho nhóm người dùng](#532)
 - [6. Tài liệu tham khảo](#6)
 	
 
@@ -422,6 +425,131 @@ Hòm thư thứ 2
 
 
 Như vậy là tôi đã có thể gửi email cảnh báo theo nhóm người dùng trong Nagios
+
+
+<a name="53"></a>
+### 5.3. Gửi mail cảnh báo theo từng nhóm người dùng
+
+Trong thực tế 1 hệ thống Data center gồm nhiều máy chủ và nhiều dịch vụ chạy trên các máy chủ đó. Sẽ có nhiều nhóm quản trị viên phụ trách các nhóm máy chủ hoặc dịch vụ. Ví dụ nhóm system admin sẽ phụ trách hệ thống server, nhóm network sẽ phụ trách các dịch vụ liên quan về mạng... Do vậy khi có sự cố xảy ra trên hệ thống, dịch vụ giám sát cần gửi mail đến đúng nhóm quản trị để xử lý.
+
+Sau đây tôi sẽ hướng dẫn cách để gửi mail theo nhóm. Mô hình lab vẫn giữ nguyên như trên
+
+
+<a name="531"></a>
+#### 5.3.1. Gửi mail cảnh báo về dịch vụ cho nhóm người dùng
+
+#### Thực hiện các bước sau trên Nagios server
+
+- Bước 1: Thêm contact trong file `/usr/local/nagios/etc/objects/contacts.cfg`. Ở đây tôi thêm các địa chỉ email và tên người dùng để liên lạc
+
+```sh
+# CONTACTS
+
+
+define contact{
+        contact_name                    trimq             ; Short name of user
+        use                             generic-contact         ; Inherit default values from generic-contact template (defined above)
+        alias                           Quoc Tri            ; Full name of user
+
+        email                           trimq212@gmail.com        ; <<***** CHANGE THIS TO YOUR EMAIL ADDRESS ******
+        service_notification_period             24x7
+        service_notification_options            w,u,c,r,f,s
+        service_notification_commands           notify-service-by-email
+        host_notification_period                24x7
+        host_notification_options               d,u,r,f,s
+        host_notification_commands              notify-host-by-email
+        }
+
+
+define contact{
+        contact_name                    quoctri             ; Short name of user
+        use                             generic-contact         ; Inherit default values from generic-contact template (defined above)
+        alias                           Tri Mai            ; Full name of user
+
+        email                           fsddfas123max@gmail.com        ; <<***** CHANGE THIS TO YOUR EMAIL ADDRESS ******
+        service_notification_period             24x7
+        service_notification_options            w,u,c,r,f,s
+        service_notification_commands           notify-service-by-email
+        host_notification_period                24x7
+        host_notification_options               d,u,r,f,s
+        host_notification_commands              notify-host-by-email
+        }
+```
+
+- Bước 2: Thêm các contact group trong file `/usr/local/nagios/etc/objects/contacts.cfg`, nghĩa là liên lạc với nhóm người dùng
+
+```sh
+# CONTACT GROUPS
+
+define contactgroup{
+        contactgroup_name       admins
+        alias                   Nagios Administrators
+        members                 trimq
+        }
+
+
+define contactgroup{
+        contactgroup_name       http-group
+        alias                   HTTP Admin
+        members                 quoctri
+        }
+```
+
+#### Ý nghĩa đoạn cấu hình
+
+<ul>
+<li>contactgroup_name: Tên của nhóm liên lạc</li>
+<li>alias: Đặt alias của nhóm này là HTTP Admin</li>
+<li>members: tên các thành viên có trong nhóm này</li>
+</ul>
+
+- Bước 3: Sửa trong file `template.cfg`. Trong `# SERVICE TEMPLATES` comment dòng sau:
+
+
+```sh
+#        contact_groups
+```
+
+- Bước 4: Thêm cấu hình sau trong file cấu hình của giám sát dịch vụ. Ví dụ tôi muốn gửi mail cảnh báo cho dịch vụ http cho nhóm HTTP-admin, tôi sẽ thêm dòng `contact_groups      http-group` vào define service. `http-group` là nhóm mà tôi đã tạo ra trong file contact
+
+```sh
+vi /usr/local/nagios/etc/servers/host1.cfg
+
+define service {
+    use                 generic-service
+    host_name           host-01
+    service_description Check HTTP service
+    check_command       check_http
+    normal_check_interval           5
+    retry_check_interval            2
+    contact_groups      http-group
+```
+
+- Bước 5: Khởi động lại dịch vụ
+
+```sh
+/etc/init.d/nagios restart
+```
+
+
+
+- Bước 6: Thực hiện trên client được giám sát, ngừng hoạt động của http
+
+```sh
+service apache2 stop
+```
+
+- Bước 7: Kiểm tra trên dashboard
+
+<img src="http://i.imgur.com/G3aYXWJ.png">
+
+- Bước 8: Kiểm tra hòm thư Gmail các địa chỉ email thuộc nhóm `http-group`
+
+<img src="http://i.imgur.com/xNe4tDP.png">
+
+
+- Bước 9: Để chắc chắn rằng Nagios chỉ gửi cảnh báo đến các contact trong nhóm `http-group`. Kiểm tra thử 1 contact trong nhóm khác không thuộc `http-group`
+
 
 
 <a name="6"></a>
