update gửi cảnh báo theo nhóm người dùng

--- a/docs/thuchanh-nagios/2.Setup-Mail-alert.md
+++ b/docs/thuchanh-nagios/2.Setup-Mail-alert.md
@@ -438,7 +438,10 @@ Sau đây tôi sẽ hướng dẫn cách để gửi mail theo nhóm. Mô hình 
 <a name="531"></a>
 #### 5.3.1. Gửi mail cảnh báo về dịch vụ cho nhóm người dùng
 
+Gửi mail cảnh báo về dịch vụ tới nhóm quản trị
+
 #### Thực hiện các bước sau trên Nagios server
+
 
 - Bước 1: Thêm contact trong file `/usr/local/nagios/etc/objects/contacts.cfg`. Ở đây tôi thêm các địa chỉ email và tên người dùng để liên lạc
 
@@ -548,7 +551,66 @@ service apache2 stop
 <img src="http://i.imgur.com/xNe4tDP.png">
 
 
-- Bước 9: Để chắc chắn rằng Nagios chỉ gửi cảnh báo đến các contact trong nhóm `http-group`. Kiểm tra thử 1 contact trong nhóm khác không thuộc `http-group`
+- Bước 9: Để chắc chắn rằng Nagios chỉ gửi cảnh báo đến các contact trong nhóm `http-group`. Kiểm tra thử 1 contact trong nhóm khác không thuộc `http-group`, nếu không có mail cảnh báo nghĩa là đã thành công
+
+
+<a name="532"></a>
+#### 5.3.2. Gửi mail cảnh báo về host cho nhóm người dùng
+
+Gửi mail cảnh báo về tính trạng host tới nhóm quản trị host
+
+#### Thực hiện các bước sau trên Nagios server
+
+- Với bài lab này, làm tương tự như bước 1 và bước 2 của cấu hình gửi cảnh báo về dịch vụ
+
+- Bước 3: Sửa trong file `template.cfg`. Trong `# HOST TEMPLATES` comment dòng sau `contact_groups`
+
+```sh
+# Linux host definition template
+
+
+# contact_groups        admins
+```
+
+Bước 4: Thêm contact trong define host của file cấu hình host giám sát
+
+```sh
+define host {
+use                             linux-server
+host_name                       host-01
+alias                           host-01
+address                         192.168.100.150
+max_check_attempts              5
+check_period                    24x7
+notification_interval           30
+notification_period             24x7
+contact_groups                  admins
+```
+
+Như vậy là tôi đã thêm `contact_groups` cho host là `admins`. Khi có cảnh báo sẽ được gửi đến nhóm người dùng trong group `admins`
+
+
+- Bước 5: Khởi động lại dịch vụ
+
+```sh
+/etc/init.d/nagios restart
+```
+
+- Bước 6: Để kiểm nghiệm tôi tắt client đi
+
+```sh
+init 0
+```
+
+- Bước 7: Kiểm tra hoạt động của client trên dashboard
+
+<img src="http://i.imgur.com/iFFQG94.png">
+
+- Bước 8: Kiểm tra trong hòm thư Gmail của người dùng trong nhóm `admins`
+
+<img src="http://i.imgur.com/DVGNQbU.png">
+
+- Bước 9: Để chắc chắn rằng Nagios chỉ gửi cảnh báo đến các contact trong nhóm `admins`. Kiểm tra thử 1 contact trong nhóm khác không thuộc `admins`, nếu không có mail cảnh báo nghĩa là đã thành công
 
 
 
