cap nhat ghi chep

--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -2,19 +2,25 @@
 
 ### Table of contents
 
-
 - [ 1. Chuẩn bị ](#1)
-    -   [1.1 Chuẩn bị môi trường cài đặt](#1.1)
-    -   [1.2 Tạo user cho Nagios](#1.2)
-- [ 2. Cài đặt Nagios ](#2)
-    - [2.1 Cài đặt Nagios Core và Plugin](#2.1)
-    - [2.2 Cài đặt NRPE](#2.2)
-    - [2.3 Khởi động Nagios Server](#2.3)
-    - [2.4 Cấu hình giám sát host Linux](#2.4)
-    - [2.5 Giám sát dịch vụ MySQL](#2.5)
-    - [2.6 Giám sát dịch vụ RabbitMQ](#2.6)
-- [3. Tham khảo](#3)
+    - [1.1 Chuẩn bị môi trường cài đặt](#1.1)
+- [ 2. Cài đặt Nagios Server](#2)
+    - [2.1 Cài đặt các gói chuẩn bị cần thiết](#2.1)
+    - [2.2 Tạo user cho Nagios](#2.2)
+    - [2.3 Cài đặt Nagios Core và Plugin](#2.3)
+    - [2.4 Khởi động Nagios Server](#2.4)
+- [3. Giám sát host/dịch vụ](#3)
+    - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
+        - [3.1.1 Cài đặt NRPE trên Nagios Server](3.1.1)
+        - [3.1.2 Cài đặt NRPE trên host cần giám sát](#3.1.2)
+        - [3.1.3 Thêm thông tin host trên Nagios Server](#3.1.3)
+        - [3.1.4 Kiểm tra trên Web UI của Nagios Server](#3.1.4)
+    - [3.2 Giám sát dịch vụ MySQL/MariaDB](#3.2)
+    - [3.3 Giám sát dịch vụ RabbitMQ](#3.3)
+- [4. Tham khảo](#4)
 
+<a name="1"></a>
+### 1. Chuẩn bị
 
 <a name="1.1"></a>
 #### 1.1 Chuẩn bị môi trường cài đặt
@@ -23,22 +29,38 @@
 
 <img src="../../images/topo.png" />
 
-#### Bảng phân IP cho các host
+#### IP Planning
 
 <img src="../../images/IP-Planning.png" />
 
 Link docs: https://goo.gl/yOim1o
 
-Để có thể cài đặt và sử dụng được Nagios Core, chúng ta phải cài đặt một số thư viện và các gói dịch vụ đi kèm.
+<a name="2"></a>
+### 2. Cài đặt Nagios trên Nagios Server
+
+<a name="2.1"></a>
+#### 2.1 Cài đặt các gói chuẩn bị cần thiết
+
+Để có thể cài đặt và sử dụng được Nagios Core, chúng ta phải cài đặt một số thư viện và các gói thư viện dịch vụ đi kèm.
+
+- Cài đặt các gói thư viện
 
 ```
 yum install gcc glibc glibc-common gd gd-devel make net-snmp openssl-devel xinetd unzip httpd php php-fpm curl wget -y
 ```
 
-<a name="1.2"></a>
-#### 1.2 Tạo user cho Nagios
+- Tắt SELinux 
 
-Tạo user `nagios`
+```
+vi /etc/sysconfig/selinux
+```
+
+Sửa dòng `SELINUX=permissive` thành `SELINUX=disable`.
+
+<a name="2.2"></a>
+#### 2.2 Tạo user cho Nagios
+
+Tạo user `nagios` trên máy chủ cài đặt Nagios Server
 
 ```sh
 useradd -m -s /bin/bash nagios
@@ -55,29 +77,27 @@ usermod -a -G nagcmd nagios
 usermod -a -G nagcmd apache
 ```
 
-<a name="2"></a>
-### 2. Cài đặt Nagios
+<a name="2.3"></a>
+#### 2.3 Cài đặt Nagios Core và Plugin
 
-Chúng ta tải Nagios Core và Plugin của nó về server. Tại thời điểm viết bài, phiên bản mới nhất là Nagios Core 4.3.1. Để cập nhật mới nhất, vui lòng bấm vào [đây](https://www.nagios.org/download/).
+Chúng ta tải Nagios Core về server. Tại thời điểm viết bài, phiên bản mới nhất là Nagios Core 4.3.1. Để cập nhật mới nhất, vui lòng bấm vào [đây](https://www.nagios.org/download/).
 
 ```sh
-mkdir ~/nagios
-cd ~/nagios
 wget http://prdownloads.sourceforge.net/sourceforge/nagios/nagios-4.3.1.tar.gz
-wget https://nagios-plugins.org/download/nagios-plugins-2.2.0.tar.gz
-curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nrpe-2.15.tar.gz
 ```
 
+Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin trên máy chủ mà ta muốn cài Nagios.
 
-<a name="2.1"></a>
-#### 2.1 Cài đặt Nagios Core và Plugin
+- **Bước 1**: Giải nén source Nagios
 
-Sau khi tải xong, chúng ta cùng giải nén và bắt đầu phần biên dịch Nagios Core và Plugin.
-
-```
-cd ~/nagios
+```sh
 tar xf nagios-4.3.1.tar.gz
-cd ~/nagios/nagios-4.3.1
+```
+
+- **Bước 2**: Biên dịch Nagios
+
+```
+cd nagios-4.3.1
 
 ./configure --with-command-group=nagcmd 
 make all
@@ -88,156 +108,376 @@ make install-config
 make install-webconf
 ```
 
-Cho phép nagios khởi động cùng với hệ thống:
+- **Bước 3**: Cho phép nagios khởi động cùng với hệ thống:
 
 ```sh
 chkconfig nagios on
 ```
 
-Cài đặt password cho `nagiosadmin`, khi đăng nhập Web:
+- **Bước 4**: Cài đặt password cho `nagiosadmin`, khi đăng nhập Web:
 
 ```sh
 htpasswd -c /usr/local/nagios/etc/htpasswd.users nagiosadmin
 ```
 
-Biên dịch các plugin
+- **Bước 5**: Tải gói Plugin và giải nén
 
 ```sh
-cd ~/nagios
+wget https://nagios-plugins.org/download/nagios-plugins-2.2.0.tar.gz
 tar xzf nagios-plugins-2.2.0.tar.gz
-cd ~/nagios/nagios-plugins-2.2.0
+```
 
-cd ~/nagios/nagios-plugins-2.2.0
+- **Bước 6**: Biên dịch các Plugin từ source code
+
+```
+cd nagios-plugins-2.2.0
 ./configure --with-nagios-user=nagios --with-nagios-group=nagios --with-openssl
 make
 make install
 ```
 
-#### 2.2 Cài đặt NRPE
+<a name="2.4"></a>
+
+#### 2.4 Khởi động Nagios Server
+
+Khởi động lại Apache và chạy `nagios`, cho phép khởi động cùng hệ thống:
+
+```sh
+systemctl enable httpd
+systemctl restart httpd
+service nagios restart
+chkconfig nagios on
+```
+
+Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
+
+```
+http://192.168.100.196/nagios
+```
+
+<img src="../../images/nagios-1.png" />
+
+<a name="3"></a>
+### 3. Giám sát host/dịch vụ trên Linux
+
+<a name="3.1"></a>
+#### 3.1 Giám sát thông qua NRPE
+
+<a name="3.1.1"></a>
+#### 3.1.1 Cài đặt NRPE trên Nagios Server
 
 `NRPE` - (*Nagios Remote Plugin Executor*) là một công cụ đi kèm để theo dõi tài nguyên hệ thống, nó còn được biết như một Agent để theo dõi các host từ xa (Remote hosts).
 
+**Mục đích của việc cài đặt này là để biên dịch ra plugin `check_nrpe`.**
+
+- **Bước 1**: Tải và Giải nén source gói NRPE
+
 ```
-cd ~/nagios
+curl -L -O http://downloads.sourceforge.net/project/nagios/nrpe-2.x/nrpe-2.15/nrpe-2.15.tar.gz
+
 tar xf nrpe-*.tar.gz
-cd ~/nagios/rpe-*
+```
+
+- **Bước 2**: Biên dịch NRPE từ source
+
+```
+cd nrpe-*
 
 ./configure --enable-command-args --with-nagios-user=nagios \
 --with-nagios-group=nagios --with-ssl=/usr/bin/openssl \
 --with-ssl-lib=/usr/lib/x86_64-linux-gnu
 
 make all
-sudo make install
-sudo make install-xinetd
-sudo make install-daemon-config
+make install
 ```
 
-Cấu hình NRPE bằng cách thêm địa chỉ IP của Nagios Server vào trường `only_from`:
+- **Bước 3**: Thêm câu lệnh `check_nrpe`
+
+    - Mở file `/usr/local/nagios/etc/objects/command.cfg`:
+    
+    
+    ```
+    vi /usr/local/nagios/etc/objects/command.cfg
+    ```
+    
+    - Thêm câu lệnh sau:
+    
+    
+    ```
+    ...
+    define command{
+        command_name check_nrpe
+        command_line $USER1$/check_nrpe -H $HOSTADDRESS$ -c $ARG1$
+    }
+    ```
+    
+    - Thoát và lưu lại file.
+    
+<a name="3.1.2"></a>
+#### 3.1.2 Cài đặt NRPE trên host cần giám sát
+
+Trên host Linux cần giám sát, chúng ta cần thực hiện các bước sau:
+
+- **Bước 1**: Cập nhật repo cho host
+
+    - Đối với client sử dụng CentOS, cài đặt repo `epel-release`:
+    
+    ```
+    yum install epel-release
+    ```
+    
+    - Đối với client sử dụng Ubuntu:
+    
+    ```
+    apt-get update
+    ```
+  
+- **Bước 2**: Cài đặt NRPE và các Plugin trên host cần giám sát
+
+    - Đối với client sử dụng CentOS, cài đặt repo `epel-release`:
+    
+    ```
+    yum install nrpe nagios-plugins-all
+    ```
+    
+    - Đối với client sử dụng Ubuntu:
+    
+    ```
+    apt-get install nagios-plugins nagios-nrpe-server
+    ```
+    
+- **Bước 3**: Cấu hình NRPE trên host cần giám sát
+
+*Bước này có thể làm trên cả 2 distro CentOS và Ubuntu.*
+
+**Sửa file cấu hình NRPE**
 
 ```
-vi /etc/xinetd.d/nrpe
+vi /etc/nagios/nrpe.cfg
 ```
+    
+**Cho phép Server Nagios có quyền truy cập và sử dụng NRPE**
 
-```
-...
-only_from = 127.0.0.1 192.168.100.196
-...
-```
-
-**Chú ý**: `192.168.100.196` là địa chỉ Nagios Server của bạn
-
-<a name="2.3"></a>
-#### 2.3 Khởi động Nagios Server
-
-Khởi động lại Apache và chạy `nagios`:
-
-```sh
-systemctl restart apache2
-service nagios restart
-```
-
-Để kiểm tra, hãy truy cập vào giao diện Web và đăng nhập bằng `nagiosadmin` và Password vừa tạo ở địa chỉ:
+Tìm trường `allowed_hosts` và thêm địa chỉ IP Nagios server của bạn vào. Mỗi IP cách nhau bởi dấu phẩy (,):
 
 ```
-http://địa-chỉ-ip/nagios
+allowed_hosts=127.0.0.1, 192.168.100.196
 ```
 
-<img src="../../images/nagios1.png" />
+Đừng thoát khỏi file, làm tiếp theo bước dưới để khai báo câu lệnh cho NRPE.
 
-<a name="2.4"></a>
-#### 2.4 Cấu hình giám sát 1 host Linux
+**Thêm câu lệnh để check các dịch vụ**
+    
+Trên 2 distro CentOS và Ubuntu, thư mục chứa các plugin trên client là khác nhau:
 
-Chúng ta đặt tất cả các file cấu hình host giám sát vào một thư mục, sửa file cấu hình chính của `nagios`:
+- Với CentOS, thư mục chứa Plugin ở `/usr/lib64/nagios/plugins/`
 
-```sh
-vi /usr/local/nagios/etc/nagios.cfg
+<img src="../../images/plugin-c-client.png" />
+
+- Với Ubuntu, thư mục chứa Plugin ở `/usr/lib/nagios/plugins/` 
+
+<img src="../../images/plugin-u-client.png" />
+    
+Vì vậy, để thêm các lệnh check dịch vụ ở 2 distro cũng phải khai báo đúng đường dẫn trỏ tới thư mục chứa các plugin. Ở ví dụ này, tôi sẽ check 2 dịch vụ SSH và HTTP qua NRPE:
+
+- Với CentOS
+
+<img src="../../images/add-command-nrpe-c.png" />
+
+- Với Ubuntu
+
+<img src="../../images/add-command-nrpe-u.png" />
+    
+Lưu lại file và thoát.
+
+**Để check các dịch vụ khác, chúng ta thêm câu lệnh tương tự với hướng dẫn bên trên. Lưu ý, cần chạy thử plugin trước để có hướng dẫn sử dụng.**
+
+- **Bước 4**: Khởi động lại dịch vụ
+    
+    - Với host sử dụng CentOS
+    
+    ```
+    systemctl restart nrpe.service
+    systemctl enable nrpe.service
+    ```
+    
+    - Với host sử dụng Ubuntu
+    
+    ```
+    service nagios-nrpe-server restart
+    ```
+
+Sau khi cài đặt và cấu hình NRPE trên host mà chúng ta muốn giám sát, chúng ta cần phải thêm host đó vào cấu hình Nagios Server trước khi bắt đầu giám sát nó.
+
+<a name="3.1.3"></a>
+#### 3.1.3 Thêm thông tin host trên Nagios Server
+
+- **Bước 1**: Cấu hình Nagios Server
+
+    - Chúng ta đặt tất cả các file cấu hình host giám sát vào một thư mục, sửa file cấu hình chính của nagios:
+
+    ```
+    vi /usr/local/nagios/etc/nagios.cfg
+    ```
+
+    - Tìm và bỏ "#" ở dòng:
+
+    ```
+    ...
+    cfg_dir=/usr/local/nagios/etc/servers
+    ...
+    ```
+
+    - Tạo thư mục để lưu trữ file cấu hình các host cần giám sát:
+
+    ```
+    mkdir /usr/local/nagios/etc/servers
+    ```
+
+- **Bước 2**: Tạo file cấu hình cho host giám sát trên Nagios Server
+
+Trên Nagios Server, tạo file cấu hình cho mỗi host mà bạn muốn giám sát chúng ở folder `/usr/local/nagios/etc/servers/`. Trong trường hợp của tôi, tôi sẽ đặt tên cho nó là `web01.cfg`
+
+```
+vi /usr/local/nagios/etc/servers/web01.cfg
 ```
 
-Tìm và bỏ "#" ở dòng:
-
-```
-...
-cfg_dir=/usr/local/nagios/etc/servers
-...
-```
-
-Tạo thư mục và file cấu hình host cần giám sát:
-
-```
-mkdir /usr/local/nagios/etc/servers
-vi /usr/local/nagios/etc/servers/Web-1.cfg
-```
-
-Ở đây, tôi sẽ giám sát 2 dịch vụ SSH và HTTP
+Thêm nội dung sau vào file, phần `host_name` để định nghĩa ra một host mới, `alias` là phần mô tả ngắn về host; `address` là địa chỉ IP của host cần giám sát.
 
 ```
 define host {
-use                             linux-server
-host_name                       web01		
-alias                           web01	
-address                         192.168.100.199
-max_check_attempts              5
-check_period                    24x7
-notification_interval           30
-notification_period             24x7
+        use                             linux-server
+        host_name                       web01
+        alias                           My Apache server
+        address                         192.168.100.199
+        max_check_attempts              5
+        check_period                    24x7
+        notification_interval           30
+        notification_period             24x7
+}
+```
+
+Với phần cấu hình trên, chúng ta chỉ có thể theo dõi được trạng thái UP/DOWN của host cần giám sát. Để giám sát thêm các dịch vụ, chúng ta tạo thêm các khối `service` trong phần cấu hình. `check_command` có thể được thêm và cài đặt các ngưỡng cảnh báo.
+
+SSH:
+
+```
+define service {
+        use                             generic-service
+        host_name                       web01
+        service_description             SSH Monitor
+        check_command                   check_nrpe!check_ssh
+}
+```
+
+HTTP:
+
+```
+define service {
+        use                             generic-service
+        host_name                       web01
+        service_description             HTTP Monitor
+        check_command                   check_nrpe!check_http
+        notifications_enabled           0
+}
+```
+
+*Chú thích:*
+
+- `use generic-service`: Sử dụng templete có sẵn cho các dịch vụ
+- `notifications_enabled 0`: Tắt cảnh báo khi dịch vụ thay đổi trạng thái
+
+Đây là file `web01.cfg` hoàn chỉnh, theo dõi 2 dịch vụ HTTP và SSH qua NRPE:
+
+```
+define host {
+        use                             linux-server
+        host_name                       web01
+        alias                           My Apache server
+        address                         192.168.100.199
+        max_check_attempts              5
+        check_period                    24x7
+        notification_interval           30
+        notification_period             24x7
 }
 define service {
-    use                 generic-service
-    host_name           web01
-    service_description HTTP
-    check_command       check_http
-    normal_check_interval           5 
-    retry_check_interval            2
+        use                             generic-service
+        host_name                       web01
+        service_description             SSH Monitor
+        check_command                   check_nrpe!check_ssh
 }
 define service {
-    use                 generic-service     ; Inherit default values from a template
-    host_name           web-01
-    service_description SSH
-    check_command       check_ssh
+        use                             generic-service
+        host_name                       web01
+        service_description             HTTP Monitor
+        check_command                   check_nrpe!check_http
+        notifications_enabled           0
 }
 ```
 
-Sau khi chỉnh sửa xong, chúng ta lưu lại file và khởi động lại nagios.
+Sau khi sửa xong, chúng ta lưu lại file và khởi động lại nagios server.
 
 ```
-systemctl restart nagios
+systemctl restart nagios.service
 ```
 
-Vào giao diện Web để kiểm tra
+<a name="3.1.4"></a>
+##### 3.1.4 Kiểm tra trên Web UI của Nagios Server
 
-<img src="../../images/nagios2.png" />
+Vào giao diện Web để kiểm tra lại:
 
-<a name="2.5"></a>
-#### 2.5 Giám sát MySQL
+```
+http://192.168.100.196/nagios
+```
+
+- **Bước 1**: Bấm vào **Service**
+
+Chúng ta sẽ thấy một host mới có tên `web01` được thêm mới và các dịch vụ đang ở trạng thái `PENDING`.
+
+<img src="../../images/wlc1.png" />
+
+Mặc định khi mới thêm host, Nagios Server chưa check các dịch vụ. Để check xem dịch vụ trên host có chạy hay không? Chúng ta bấm vào dịch vụ cần check, ở đây tôi sẽ chọn dịch vụ `HTTP`.
+
+<img src="../../images/wlc-2.png" />
+
+- **Bước 2**: Bấm vào **Re-schedule the next check of this service**
+
+Khi click vào, chúng ta thấy một thông báo "**This service has not yet been checked, so status information is not avaliable.**", Đừng lo lắng, hãy click vào phần tô đỏ **Re-schedule the next check of this service** để force lượt check tiếp theo.
+
+<img src="../../images/wlc-3.png" />
+
+- **Bước 3**: Click tiếp vào **Commit**.
+
+<img src="../../images/wlc-4.png" />
+
+
+- **Bước 4**: Click tiếp vào **Done**.
+
+<img src="../../images/wlc-5.png" />
+
+- **Bước 5**: Thông tin dịch vụ đã được check sẽ hiện ra như sau:
+
+<img src="../../images/wlc-6.png" />
+
+Tương tự, nếu bạn muốn check dịch vụ khác. Với ví dụ, này là `SSH`, các bạn thao tác lại như với dịch vụ `HTTP` mà tôi vừa hướng dẫn bên trên.
+
+Sau khi Nagios Server check xong các dịch vụ, Dashboard sẽ hiển thị như sau:
+
+<img src="../../images/wlc-7.png" />
+
+Như vậy, 2 dịch vụ mà chúng ta giám sát trên host hoạt động bình thường.
+
+<a name="3.2"></a>
+#### 3.2 Giám sát dịch vụ MySQL
 
 Vui lòng bấm vào [đây](4.Monitor-MySQL.md).
 
-<a name="2.6"></a>
-#### 2.6 Giám sát RabbitMQ
+<a name="3.3"></a>
+#### 3.3 Giám sát dịch vụ RabbitMQ
 
 Vui lòng bấm vào [đây](5.Monitor-RabbitMQ.md).
 
-<a name="3"></a>
-### 3. Tham khảo
+<a name="4"></a>
+### 4. Tham khảo
 
 - https://assets.nagios.com/downloads/nagioscore/docs/nagioscore/4/en/quickstart-fedora.html
