--- a/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
+++ b/docs/thuchanh-nagios/5.Monitor-RabbitMQ.md
@@ -1,16 +1,19 @@
 ## Monitor RabbitMQ trong nagios
 
-**Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS không thành công!**
+**Bài lab được thực hiện trên Nagios Server - Ubuntu 16.04 vì cài perl trên CentOS 7 không thành công!**
 
 ### Nội dung
 
 - [ 1. Thông tin host ](#1)
-- [ 2. Chuẩn bị và cài đặt Plugin ](#2)
-    - [ 2.1. Chuẩn bị ](#2.1)
-    - [ 2.2. Cài đặt Plugin](#2.2)
-    - [ 2.3. Thêm thông tin host và giám sát ](#2.3)
+- [ 2. Các bước tiến hành ](#2)
+    - [ 2.1. Chuẩn bị trên host RabbitMQ ](#2.1)
+    - [ 2.2. Cấu hình trên Nagios Server](#2.2)
+        - [ 2.2.1 Cài đặt Perl-CPAN trên Nagios Server ](#2.2.1)
+        - [ 2.2.2 Cài đặt Plugin trên Nagios Server ](#2.2.2)
+        - [ 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server](#2.2.3)
+        
 <a name="1"></a>
-### 1. Thông tin host RabbitMQ
+## 1. Thông tin host RabbitMQ
 
 ```
 OS: CentOS 7
@@ -18,12 +21,28 @@ IP: 192.168.100.198
 Hostname: node1
 Service: RabbitMQ
 ```
+
 <a name="2"></a>
-### 2. Chuẩn bị và cài đặt Plugin
+## 2. Các bước tiến hành
 
-#### 2.1 Chuẩn bị
+<a name="2.1"></a>
+### 2.1 Chuẩn bị trên host RabbitMQ
 
-#### Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server
+Đầu tiên, chúng ta phải tạo một user có chức năng `monitoring` trên RabbitMQ.
+
+```
+rabbitmqctl add_user mon 1
+rabbitmqctl set_user_tags mon monitoring
+rabbitmqctl set_permissions -p / mon ".*" ".*" ".*" 
+```
+
+<a name="2.2"></a>
+### 2.2 Cấu hình trên Nagios Server
+
+<a name="2.2.1"></a>
+#### 2.2.1 Cài đặt Perl-CPAN trên Nagios Server
+
+**Cài đặt perl và gói `Monitoring::Plugins` trên Nagios server**
 
 ```sh
 curl -L http://cpanmin.us | perl - --sudo App::cpanminus
@@ -35,7 +54,8 @@ perl -MCPAN -e 'install Math::Calc::Units'
 
 **Lưu ý**: Khi lần đầu chạy lệnh trên, CPAN sẽ yêu cầu một số thiết lập, bấm Enter để nhập mặc định.
 
-#### 2.2 Cài đặt Plugin
+<a name="2.2.2"></a>
+#### 2.2.2 Cài đặt Plugin trên Nagios Server
 
 #### Tải gói plugin từ `git` và copy chúng vào thư mục plugins
 
@@ -48,15 +68,10 @@ cp nagios-plugins-rabbitmq/scripts/* /usr/local/nagios/libexec/rabbitmq/
 chown -R nagios. /usr/local/nagios/libexec/rabbitmq/
 ```
 
-#### 2.3. Thêm thông tin host và giám sát
+<a name="2.2.3"></a>
+#### 2.2.3 Thêm thông tin host và giám sát dịch vụ trên Nagios Server
 
-Đầu tiên, chúng ta phải tạo một user có chức năng `monitoring` trên RabbitMQ.
-
-```
-rabbitmqctl add_user mon 1
-rabbitmqctl set_user_tags mon monitoring
-rabbitmqctl set_permissions -p / mon ".*" ".*" ".*" 
-```
+- **Bước 1:** Thêm thông tin vào file host
 
 Quay trở lại Nagios server, chúng ta sẽ thêm phần thông tin của RabbitMQ vào `/etc/hosts`
 
@@ -68,6 +83,7 @@ vi /etc/hosts
 ...
 192.168.100.198 node1
 ```
+- **Bước 2:** Kiểm tra plugin
 
 Kiểm tra plugin, bằng lệnh sau:
 
@@ -77,6 +93,8 @@ cd /usr/local/nagios/libexec/rabbitmq/
 ```
 
 <img src="../../images/plugin-rabbitmq1.png" />
+
+- **Bước 3:** Thêm câu lệnh vào Nagios
 
 #### Thêm câu lệnh kiểm tra trong Nagios:
 
@@ -94,7 +112,7 @@ define command {
 }
 define command {
  command_name check_rabbitmq_cluster 
- command_line $USER1$/rabbitmq/check_rabbitmq_cluster -H $ARG1$ --port=$ARG2$ -u $ARG3$ -p $ARG4$ -w 1 -c 2
+ command_line $USER1$/rabbitmq/check_rabbitmq_cluster -H $ARG1$ --port=$ARG2$ -u $ARG3$ -p $ARG4$
 }
 define command {
  command_name check_rabbitmq_connections
@@ -143,7 +161,9 @@ define command {
 ...
 ```
 
-Lưu ý: các lệnh trên chưa đặt ngưỡng cảnh báo.
+**Lưu ý**: các lệnh trên chưa đặt ngưỡng cảnh báo.
+
+- **Bước 4:** Tạo file cấu hình cho host RabbitMQ
 
 Tiếp theo, chúng ta tạo một `host` mới
 
@@ -226,12 +246,14 @@ define service {
 }
 ```
 
-Lưu lại file và khởi động lại nagios
+Lưu lại file.
+
+- **Bước 5:** Khởi động lại nagios
 
 ```
 systemctl restart nagios
 ```
 
-Kiểm tra trên Web UI:
+- **Bước 6:** Kiểm tra trên Web UI:
 
 <img src="../../images/plugin-rabbitmq2.png">
