--- a/docs/thuchanh-nagios/6.Monitor-MySQL.md
+++ b/docs/thuchanh-nagios/6.Monitor-MySQL.md
@@ -4,9 +4,10 @@
 
 - [ 1. Thông tin host ](#1)
 - [ 2. Chuẩn bị và cài đặt Plugin ](#2)
-    - [ 2.1. Chuẩn bị ](#2.1)
+    - [ 2.1. Chuẩn bị trên host Database ](#2.1)
     - [ 2.2. Cài đặt Plugin](#2.2)
     - [ 2.3. Thêm thông tin host và giám sát ](#2.3)
+    
 <a name="1"></a>
 ### 1. Thông tin host MySQL
 
@@ -17,9 +18,11 @@ Service: MySQL or MariaDB
 ```
 <a name="2"></a>
 ### 2. Chuẩn bị và cài đặt Plugin
+
 <a name="2.1"></a>
-#### 2.1. Chuẩn bị
-**Cho phép Bind đến DB**
+#### 2.1. Chuẩn bị trên host Database
+
+- **Bước 1:** Cho phép Bind đến DB
 
 Sửa file: `vi /etc/my.cnf` (Ubuntu) hoặc `vi /etc/my.cnf.d/server.cnf` (CentOS/RHEL) và thêm ở phần `[mysqld]`
 
@@ -30,7 +33,7 @@ bind-address = 0.0.0.0
 ...
 ```
 
-Restart lại dịch vụ
+- **Bước 2:** Restart lại dịch vụ
 
 ```
 systemctl restart mariadb
@@ -42,7 +45,7 @@ hoặc
 systemctl restart mysql
 ```
 
-**Tạo user kiểm tra cho nagios**
+- **Bước 3:** Tạo user kiểm tra cho nagios
 
 Ở phần này chúng ta cần tạo một USER có quyền USAGE trên host DB (192.168.100.197) (MySQL hoặc MariaDB).
 
@@ -50,13 +53,16 @@ systemctl restart mysql
 GRANT usage ON *.* TO 'checker'@'192.168.100.196' IDENTIFIED BY '123';
 ```
 
-- `nagios` : Tên của user dùng cho icinga2 có thể truy xuất vào DB
+- `checker` : Tên của user dùng cho nagios có thể truy xuất vào DB
 - `123` : Mật khẩu của `checker` (Tùy chọn)
 - `192.168.100.196` : Địa chỉ IP của Nagios Server
 
 Như vậy là ta đã hoàn thành công việc ở host DB.
+
 <a name="2.2"></a>
-#### 2.2. Cài đặt Plugin
+#### 2.2. Cài đặt Plugin trên Nagios Server
+
+- **Bước 1:** Cài đặt các gói đi kèm
 
 Trên Nagios server, chúng ta sẽ thực hiện cài đặt Plugin. Trước hết, cài đặt những gói đi kèm.
 
@@ -80,7 +86,7 @@ Cài gói MariaDB-client và DBI, DBD::mysql
 yum install MariaDB-client perl-DBI perl-DBD-MySQL -y
 ```
 
-Cài đặt plugin `check-mysql-health`
+- **Bước 2:** Cài đặt plugin `check-mysql-health`
 
 ```
 wget https://labs.consol.de/assets/downloads/nagios/check_mysql_health-2.2.2.tar.gz 
@@ -91,8 +97,9 @@ make
 make install
 ```
 
-Chuyển đến thư mục `/usr/local/nagios/libexec/` và kiểm tra plugin
+- **Bước 3:** Kiểm tra plugin
 
+Chuyển đến thư mục `/usr/local/nagios/libexec/` và kiểm tra plugin
 
 Chúng ta có thể kiểm tra plugin có hoạt động hay không bằng lệnh sau:
 
@@ -105,8 +112,11 @@ cd /usr/local/nagios/libexec/
 Kết quả trả về có dạng, cho biết plugin hoạt động ổn định:
 
 <img src="../../images/test-plugin-mysql.png" />
+
 <a name="2.3"></a>
 #### 2.3 Thêm thông tin host và giám sát
+
+- **Bước 1:** Thêm command vào Nagios
 
 Đầu tiên, chúng ta thêm một `command` mới với nội dung:
 
@@ -123,6 +133,8 @@ command_name check_mysql_health
 command_line $USER1$/check_mysql_health -H $ARG4$ --username $ARG1$ --password $ARG2$ --port $ARG5$ --mode $ARG3$
 }
 ```
+
+- **Bước 2:** Tạo file cấu hình cho host DB
 
 Sau đó, chúng ta khai báo thông tin về máy chủ DB.
 
@@ -275,11 +287,15 @@ check_command check_mysql_health!checker!123!long-running-procs!192.168.100.197!
 
 Chi tiết `mode` xem tại [đây](https://labs.consol.de/nagios/check_mysql_health/#command-line-parameters).
 
+- **Bước 3:** Khởi động lại Nagios Server
+
 Sau khi thêm các dịch vụ theo dõi DB mà bạn muốn, chúng khởi động lại nagios để nó nhận những gì mình vừa cấu hình.
 
 ```
 systemctl restart nagios
 ```
+
+- **Bước 4:** Kiểm tra trên Web UI
 
 Kiểm tra lại trên Web, **Current status > Services > db-mysql01**
 
