--- a/docs/thuchanh-nagios/1.Setup-CentOS-7.md
+++ b/docs/thuchanh-nagios/1.Setup-CentOS-7.md
@@ -11,7 +11,7 @@
     - [2.4 Khởi động Nagios Server](#2.4)
 - [3. Giám sát host/dịch vụ](#3)
     - [3.1 Giám sát host Linux thông qua NRPE](#3.1)
-        - [3.1.1 Cài đặt NRPE trên Nagios Server](3.1.1)
+        - [3.1.1 Cài đặt NRPE trên Nagios Server](#3.1.1)
         - [3.1.2 Cài đặt NRPE trên host cần giám sát](#3.1.2)
         - [3.1.3 Thêm thông tin host trên Nagios Server](#3.1.3)
         - [3.1.4 Kiểm tra trên Web UI của Nagios Server](#3.1.4)
