--- a/docs/thuchanh-nagios/7.Escalations.md
+++ b/docs/thuchanh-nagios/7.Escalations.md
@@ -12,7 +12,7 @@
 <a name="1"></a>   
 ### 1. Giới thiệu
 
-Ở phần này chúng ta có thể hiểu nôm na rằng. Khi một host/service thay đổi trạng thái, mail cảnh báo sẽ gửi tới một người hoặc một nhóm thứ nhất đã được đặt. Nếu quá khoảng thời gian chúng ta đặt cho người/nhóm thứ nhất, Nagios sẽ gửi thông báo tới nhóm thứ 2.
+Ở phần này chúng ta có thể hiểu nôm na rằng. Khi một host/service thay đổi trạng thái, mail cảnh báo sẽ gửi tới một người hoặc một nhóm thứ nhất đã được đặt. Nếu quá khoảng thời gian chúng ta đặt cho người/nhóm thứ nhất, Nagios sẽ gửi thông báo tới nhóm thứ 2. Và khi host/service trở về trạng thái OK, sẽ có mail cảnh báo gửi tới cả 2 nhóm.
 
 <img src="../../images/nagiosescalation.png" />
 
