--- a/docs/thuchanh-nagios/7.Escalations.md
+++ b/docs/thuchanh-nagios/7.Escalations.md
@@ -93,7 +93,7 @@
     }
     ```
 
-    **CHÚ Ý:** 
+        **CHÚ Ý:** 
         - Thay địa chỉ email của các thành viên vào trường `email`.
         - `Group` có thể có nhiều `contact`, mỗi `contact` được phân cách nhau bởi dấu phẩy (,).
 
@@ -128,13 +128,13 @@
     }
     ```
 
-    **Chú thích:**
+        **Chú thích:**
 
-    - `host_name`: Xác định hostname đặt cảnh báo
-    - `contact_groups`: (Các) Nhóm nhận mail cảnh báo
-    - `first_notification`: Tin cảnh báo được gửi từ tin thứ 2
-    - `last_notification`: Số tin cảnh báo gửi đến cuối cùng. Ví dụ `10`, bản tin thứ 10 đã được nagios gửi đi, bản tin số 11 sẽ không được gửi vào nhóm này. Nếu muốn nhận cho đến khi host UP, đặt 0.
-    - `notification_interval`: Thời gian gửi đi bản tin tiếp theo.
+        - `host_name`: Xác định hostname đặt cảnh báo
+        - `contact_groups`: (Các) Nhóm nhận mail cảnh báo
+        - `first_notification`: Tin cảnh báo được gửi từ tin thứ 2
+        - `last_notification`: Số tin cảnh báo gửi đến cuối cùng. Ví dụ `10`, bản tin thứ 10 đã được nagios gửi đi, bản tin số 11 sẽ không được gửi vào nhóm này. Nếu muốn nhận cho đến khi host UP, đặt 0.
+        - `notification_interval`: Thời gian gửi đi bản tin tiếp theo.
 
     - **Bước 3:** Lưu file và khởi động lại dịch vụ
 
@@ -185,17 +185,18 @@
     }	
     ```
 
-    **Chú thích:**
+        **Chú thích:**
 
-            - `service_description`: Phần mô tả của dịch vụ, chú ý nên viết liền như mẫu `HTTPMonitor`. Cấu hình `*` để chọn tất cả các dịch vụ đang theo dõi.
-            - `escalation_options`: Trạng thái của dịch vụ R - OK, W - Warnning, C - Critical,...
-        
+        - `service_description`: Phần mô tả của dịch vụ, chú ý nên viết liền như mẫu `HTTPMonitor`. Cấu hình `*` để chọn tất cả các dịch vụ đang theo dõi.
+        - `escalation_options`: Trạng thái của dịch vụ R - OK, W - Warnning, C - Critical,...
+
     - **Bước 3:** Lưu file và khởi động lại dịch vụ
 
     ```
     service nagios restart
     ```
     
+<a name="3"></a> 
 ### 3. Tham khảo
 
 - https://assets.nagios.com/downloads/nagioscore/docs/nagioscore/3/en/escalations.html
