--- a/docs/thuchanh-nagios/7.Escalations.md
+++ b/docs/thuchanh-nagios/7.Escalations.md
@@ -22,13 +22,13 @@
 <a name="2.1"></a>
 #### 2.1 Cấu hình `contact` và `group` nhận cảnh báo
 
-    - **Bước 1:** Mở file cấu hình `contacts`
+- **Bước 1:** Mở file cấu hình `contacts`
 
     ```
     vi /usr/local/nagios/etc/objects/contacts.cfg
     ```
 
-    - **Bước 2:** Thêm `contact` và `group` vào file cấu hình
+- **Bước 2:** Thêm `contact` và `group` vào file cấu hình
 
     ```
     ...
@@ -93,14 +93,14 @@
     }
     ```
 
-        **CHÚ Ý:** 
-        - Thay địa chỉ email của các thành viên vào trường `email`.
-        - `Group` có thể có nhiều `contact`, mỗi `contact` được phân cách nhau bởi dấu phẩy (,).
+    **CHÚ Ý:** 
+    - Thay địa chỉ email của các thành viên vào trường `email`.
+    - `Group` có thể có nhiều `contact`, mỗi `contact` được phân cách nhau bởi dấu phẩy (,).
 
 <a name="2.2"></a>
 #### 2.2 Cấu hình cảnh báo theo `host`
 
-    - **Bước 1**: Mở file cấu hình của `host`
+- **Bước 1**: Mở file cấu hình của `host`
 
     Trong bài hướng dẫn cài đặt lần trước, tôi đã giám sát 1 host có tên là `web01.cfg`.
 
@@ -108,7 +108,7 @@
     vi /usr/local/nagios/etc/servers/web01.cfg
     ```
 
-    - **Bước 2**: Thêm cấu hình cảnh báo
+- **Bước 2**: Thêm cấu hình cảnh báo
 
     ```
     ...
@@ -136,7 +136,7 @@
         - `last_notification`: Số tin cảnh báo gửi đến cuối cùng. Ví dụ `10`, bản tin thứ 10 đã được nagios gửi đi, bản tin số 11 sẽ không được gửi vào nhóm này. Nếu muốn nhận cho đến khi host UP, đặt 0.
         - `notification_interval`: Thời gian gửi đi bản tin tiếp theo.
 
-    - **Bước 3:** Lưu file và khởi động lại dịch vụ
+- **Bước 3:** Lưu file và khởi động lại Nagios
 
     ```
     service nagios restart
@@ -146,7 +146,7 @@
 #### 2.3 Cấu hình cảnh báo theo `service`
 
 
-    - **Bước 1**: Mở file cấu hình của `host`
+- **Bước 1**: Mở file cấu hình của `host`
 
     Bây giờ, tôi sẽ đặt cảnh báo cho nó ở dịch vụ `HTTP` ở host `web01.cfg`.
 
@@ -154,7 +154,7 @@
     vi /usr/local/nagios/etc/servers/web01.cfg
     ```
 
-    - **Bước 2**: Thêm cấu hình cảnh báo
+- **Bước 2**: Thêm cấu hình cảnh báo
 
     ```
     ...
@@ -190,7 +190,7 @@
         - `service_description`: Phần mô tả của dịch vụ, chú ý nên viết liền như mẫu `HTTPMonitor`. Cấu hình `*` để chọn tất cả các dịch vụ đang theo dõi.
         - `escalation_options`: Trạng thái của dịch vụ R - OK, W - Warnning, C - Critical,...
 
-    - **Bước 3:** Lưu file và khởi động lại dịch vụ
+- **Bước 3:** Lưu file và khởi động lại dịch vụ
 
     ```
     service nagios restart
